Redirect output stream to one stream. Change the key from line number to a combination of filename, line number and variable name.